<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Mp3Settings</class>
 <widget class="QWidget" name="Mp3Settings">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>320</width>
    <height>158</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string/>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="bitrateSetup">
     <property name="title">
      <string>Setup bitrate type and value</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QRadioButton" name="selectCBR">
        <property name="text">
         <string>Fixed bitrate</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <layout class="QHBoxLayout" name="bitrateLayout">
        <item>
         <widget class="QSlider" name="bitrateValue">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="minimum">
           <number>32</number>
          </property>
          <property name="maximum">
           <number>320</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSpinBox" name="bitratePrecise">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="minimum">
           <number>32</number>
          </property>
          <property name="maximum">
           <number>320</number>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item row="1" column="0">
       <widget class="QRadioButton" name="selectABR">
        <property name="text">
         <string>Average bitrate</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QRadioButton" name="selectQuality">
        <property name="text">
         <string>Quality</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <layout class="QHBoxLayout" name="qualityLayout">
        <item>
         <widget class="QLabel" name="maxQuality">
          <property name="text">
           <string>Max</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSlider" name="qualityValue">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="minimum">
           <number>0</number>
          </property>
          <property name="maximum">
           <number>9</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="tickPosition">
           <enum>QSlider::TicksBelow</enum>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="minQuality">
          <property name="layoutDirection">
           <enum>Qt::LeftToRight</enum>
          </property>
          <property name="text">
           <string>Min</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>selectQuality</sender>
   <signal>toggled(bool)</signal>
   <receiver>bitrateValue</receiver>
   <slot>setDisabled(bool)</slot>
  </connection>
  <connection>
   <sender>selectQuality</sender>
   <signal>toggled(bool)</signal>
   <receiver>bitratePrecise</receiver>
   <slot>setDisabled(bool)</slot>
  </connection>
  <connection>
   <sender>selectQuality</sender>
   <signal>toggled(bool)</signal>
   <receiver>qualityValue</receiver>
   <slot>setEnabled(bool)</slot>
  </connection>
  <connection>
   <sender>bitrateValue</sender>
   <signal>valueChanged(int)</signal>
   <receiver>bitratePrecise</receiver>
   <slot>setValue(int)</slot>
  </connection>
  <connection>
   <sender>bitratePrecise</sender>
   <signal>valueChanged(int)</signal>
   <receiver>bitrateValue</receiver>
   <slot>setValue(int)</slot>
  </connection>
 </connections>
</ui>
